--- a/site/public/Testes/Testes.html
+++ b/site/public/Testes/Testes.html
@@ -38,6 +38,7 @@
         </div>
     </header>
 
+    <!-- Início do link do meu quiz -->
 
     <div class="div_container4">
         <br><br><br>
@@ -50,30 +51,36 @@
                 <br>
                 <a href="../login.html"><span>Qual personagem dos exclusivos
                         PlayStation você é ?</span></a>
-<br>
+                <br>
 
             </div>
         </div>
 
+        <!-- Fim do link do meu quiz -->
+
         <div class="div_linha"></div>
+
+        <!-- Início do link dos outros quizzes -->
 
         <div class="div_direita">
 
             <div class="div_junto">
 
-            <h1>Outros quizzes</h1>
-            <img src="../assets/imagens/img_Testes/TesteAloy.jpg" alt="">
-            <br>
-            <a href="../login.html">O quanto voce sabe sobre
-                horizon forbidden west?</a>
-            <br>
-            <img src="../assets/imagens/Imagens_Result/FimDeacon.jpg" alt="">
-            <br>
-            <a href="../login.html">O quanto voce sabe sobre
-                Days Gone?</a>
-            <br>
+                <h1>Outros quizzes</h1>
+                <img src="../assets/imagens/img_Testes/TesteAloy.jpg" alt="">
+                <br>
+                <a href="../login.html">O quanto você sabe sobre
+                    horizon forbidden west?</a>
+                <br>
+                <img src="../assets/imagens/Imagens_Result/FimDeacon.jpg" alt="">
+                <br>
+                <a href="../login.html">O quanto você sabe sobre
+                    Days Gone?</a>
+                <br>
+            </div>
         </div>
-        </div>
+
+        <!-- Fim do link dos outros quizzes -->
 
     </div>
 
