--- a/site/public/noticias.html
+++ b/site/public/noticias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/noticias.css">
-    <title>Document</title>
+    <title>Notícias</title>
 </head>
 
 <body>
@@ -35,6 +35,8 @@
         </div>
     </header>
 
+    <!-- Início das notícias -->
+
     <div class="div_container1">
 
         <div class="div_centralizado">
@@ -59,7 +61,7 @@
         </div>
     </div>
 
-
+    <!-- Fim das notícias -->
 
 </body>
 
