--- a/site/public/index.html
+++ b/site/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina initial</title>
+    <title>Pagina inicial</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
@@ -20,10 +20,16 @@
 
             <a href="/index.html"><img class="logo" src="/assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href=""><p>Sobre nós</p></a>
-                <a href="/Testes/Testes.html"><p>Testes</p></a>
-                
-                <a href="noticias.html"><p>Notícias</p></a>
+                <a href="">
+                    <p>Sobre nós</p>
+                </a>
+                <a href="/Testes/Testes.html">
+                    <p>Testes</p>
+                </a>
+
+                <a href="noticias.html">
+                    <p>Notícias</p>
+                </a>
                 <p>|</p>
                 <a href="/login.html"><button class="btn_Entrar">Entrar</button></a>
                 <a href="/cadastro.html"><button class="btn_Registrar">Registrar</button></a>
@@ -32,7 +38,7 @@
         </div>
     </header>
 
-<!-- Início Notícia em destaque  -->
+    <!-- Início Notícia em destaque  -->
 
     <div class="div_container1">
 
@@ -40,25 +46,33 @@
 
         <img src="/assets/imagens/Img_Página inicial/image.png" alt="">
 
-        <b><a href="https://meups.com.br/noticias/marvels-spider-man-2-o-melhor-da-insomniac/#:~:text=A%20Insomniac%20Games%20continua%20trabalhando,jogo%20j%C3%A1%20feito%E2%80%9D%20pela%20desenvolvedora."> Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</a></b>
+        <b><a
+                href="https://meups.com.br/noticias/marvels-spider-man-2-o-melhor-da-insomniac/#:~:text=A%20Insomniac%20Games%20continua%20trabalhando,jogo%20j%C3%A1%20feito%E2%80%9D%20pela%20desenvolvedora.">
+                Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</a></b>
 
+        <!-- Fim Notícia em destaque  -->
 
         <div class="div_linha"></div>
+
+        <!-- Início dos Testes  -->
 
         <b>Testes de personalidade e conhecimento</b>
 
         <div class="div_container2">
 
-            <div class="div_card1"><img src="/assets/imagens/Img_Página inicial/Teste1.png" alt=""><a href="/login.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
+            <div class="div_card1"><img src="/assets/imagens/Img_Página inicial/Teste1.png" alt=""><a
+                    href="/login.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
 
-            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt=""><a href="/login.html">Que tipo de gamer você é ?</a></div>
+            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt=""><a
+                    href="/login.html">Que tipo de gamer você é ?</a></div>
 
-            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt=""><a href="/login.html">O quanto você sabe sobre o de God of War ?</a></div>
+            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt=""><a
+                    href="/login.html">O quanto você sabe sobre o de God of War ?</a></div>
 
         </div>
     </div>
 
-
+    <!-- Fim dos Testes  -->
 
 </body>
 </html>
