Ajustes finais no html/css

--- a/site/public/NavBar/NavBarLog.html
+++ b/site/public/NavBar/NavBarLog.html
@@ -14,21 +14,23 @@
 
         <div id="container " class="div_container">
 
-            <a href=""><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
+            <a href="/site_Log/"><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href="">
+                <a href="sobreNos.html">
                     <p>Sobre nós</p>
                 </a>
-                <a href="">
+                <a href="Testes.html">
                     <p>Testes</p>
                 </a>
 
-                <a href="">
+                <a href="noticias.html">
                     <p>Notícias</p>
                 </a>
                 <p>|</p>
-                <p id="nomeExibicao"></p>
-
+                <b>
+                    <p id="nomeExibicao"></p>
+                </b>
+                <a href="/"><button class="btn_Sair" onclick="sair()">Sair</button></a>
             </ul>
 
         </div>
