--- a/site/public/Resultados/ResultJim.html
+++ b/site/public/Resultados/ResultJim.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ResultJim</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/NavBar.css">
     <link rel="stylesheet" href="../css/ResultJim.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
             <div class="div_result">
                 <div class="div_texto">
                     <h1>Jim Sakai</h1>
-                    <span>RACIONAL: cujo pensamento é aquele baseado em método, em uma reflexão antes de agir diante de qualquer situação.</span><br>
+                    <span>RACIONAL: Cujo pensamento é aquele baseado em método, em uma reflexão antes de agir diante de qualquer situação.</span><br>
                         <button onclick="Resumo()">Ir para o resumo</button>
                 </div>
                 <div class="img_Jim">
