--- a/site/public/Site_Log/Testes.html
+++ b/site/public/Site_Log/Testes.html
@@ -10,8 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/NavBarLog.css">
     <link rel="stylesheet" href="../css/Testes.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -21,7 +24,7 @@
 
             <a href="/site_Log/"><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href="">
+                <a href="sobreNos.html">
                     <p>Sobre nós</p>
                 </a>
                 <a href="Testes.html">
@@ -87,6 +90,49 @@
         <!-- Fim dos Testes  -->
 
     </div>
+
+    <footer>
+
+        <div id="container " class="div_container7">
+
+            <img class="logo" src="../assets/imagens/PS BLOG.png" alt="">
+            <ul>
+                <br><br>
+                <div class="coluna"> <a href="index.html">
+                        <p id="centro">Página Inicial</p>
+                    </a>
+                    <a href="Testes.html">
+                        <p id="centro">Testes</p>
+                    </a>
+                </div>
+                <br><br>
+                <div class="linha"></div>
+                <br><br>
+                <div class="coluna"> <a href="sobreNos.html">
+                        <p id="centro">Sobre nós</p>
+                    </a>
+                    <a href="noticias.html">
+                        <p id="centro">Notícias</p>
+                    </a>
+                </div>
+                <br><br>
+                <div class="linha"></div>
+                <br><br>
+                <div class="coluna">
+
+                    <p id="centro">Contatos</p>
+
+                    <p id="centro">Instagram: @PsBlog</p>
+
+                    <p id="centro">FaceBook: PsBlog</p>
+
+                </div>
+                <br><br>
+
+            </ul>
+
+        </div>
+    </footer>
 
 </body>
 <script>
