--- a/site/public/login.html
+++ b/site/public/login.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/login.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -21,13 +23,13 @@
 
             <a href="/index.html"><img class="logo" src="/assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href="">
+                <a href="sobreNos.html">
                     <p>Sobre nós</p>
                 </a>
                 <a href="/Testes/Testes.html">
                     <p>Testes</p>
                 </a>
-                <a href="">
+                <a href="noticias.html">
                     <p>Notícias</p>
                 </a>
                 <p>|</p>
