--- a/site/public/noticias.html
+++ b/site/public/noticias.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/noticias.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
+
     <title>Notícias</title>
 </head>
 
@@ -17,7 +20,7 @@
 
             <a href="/index.html"><img class="logo" src="/assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href="">
+                <a href="sobreNos.html">
                     <p>Sobre nós</p>
                 </a>
                 <a href="/Testes/Testes.html">
@@ -62,6 +65,49 @@
     </div>
 
     <!-- Fim das notícias -->
+
+    <footer>
+
+        <div id="container " class="div_container7">
+
+            <img class="logo" src="../assets/imagens/PS BLOG.png" alt="">
+            <ul>
+                <br><br>
+                <div class="coluna"> <a href="index.html">
+                        <p id="centro">Página Inicial</p>
+                    </a>
+                    <a href="Testes/Testes.html">
+                        <p id="centro">Testes</p>
+                    </a>
+                </div>
+                <br><br>
+                <div class="linha"></div>
+                <br><br>
+                <div class="coluna"> <a href="sobreNos.html">
+                        <p id="centro">Sobre nós</p>
+                    </a>
+                    <a href="noticias.html">
+                        <p id="centro">Notícias</p>
+                    </a>
+                </div>
+                <br><br>
+                <div class="linha"></div>
+                <br><br>
+                <div class="coluna">
+
+                    <p id="centro">Contatos</p>
+
+                    <p id="centro">Instagram: @PsBlog</p>
+
+                    <p id="centro">FaceBook: PsBlog</p>
+
+                </div>
+                <br><br>
+
+            </ul>
+
+        </div>
+    </footer>
 
 </body>
 
