--- a/site/public/Site_Log/dashboard.html
+++ b/site/public/Site_Log/dashboard.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -19,7 +20,7 @@
 
             <a href="/site_Log/"><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href="">
+                <a href="sobreNos.html">
                     <p>Sobre nós</p>
                 </a>
                 <a href="Testes.html">
