--- a/site/public/index.html
+++ b/site/public/index.html
@@ -9,8 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -20,7 +23,7 @@
 
             <a href="/index.html"><img class="logo" src="/assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href="">
+                <a href="sobreNos.html">
                     <p>Sobre nós</p>
                 </a>
                 <a href="/Testes/Testes.html">
@@ -38,7 +41,7 @@
         </div>
     </header>
 
-    <!-- Início Notícia em destaque  -->
+    <!-- Início do texto  -->
 
     <div class="div_container1">
 
@@ -74,5 +77,49 @@
 
     <!-- Fim dos Testes  -->
 
+    <footer>
+
+        <div id="container " class="div_container7">
+
+            <img class="logo" src="../assets/imagens/PS BLOG.png" alt="">
+            <ul>
+                <br><br>
+                <div class="coluna"> <a href="index.html">
+                        <p id="centro">Página Inicial</p>
+                    </a>
+                    <a href="Testes/Testes.html">
+                        <p id="centro">Testes</p>
+                    </a>
+                </div>
+                <br><br>
+                <div class="linha"></div>
+                <br><br>
+                <div class="coluna"> <a href="sobreNos.html">
+                        <p id="centro">Sobre nós</p>
+                    </a>
+                    <a href="noticias.html">
+                        <p id="centro">Notícias</p>
+                    </a>
+                </div>
+                <br><br>
+                <div class="linha"></div>
+                <br><br>
+                <div class="coluna">
+
+                    <p id="centro">Contatos</p>
+
+                    <p id="centro">Instagram: @PsBlog</p>
+
+                    <p id="centro">FaceBook: PsBlog</p>
+
+                </div>
+                <br><br>
+
+            </ul>
+
+        </div>
+    </footer>
+
 </body>
+
 </html>
