--- a/site/public/telefone.html
+++ b/site/public/telefone.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="/css/NavBar.css"> -->
     <link rel="stylesheet" href="/css/telefone.css">
+    <link rel="shortcut icon" href="../assets/imagens/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
